# JsonReader

./: .buildinfo  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: classsofa_1_1simulation_1_1SceneLoaderJson.doctree  dir_src.doctree  dir_src_JsonReader.doctree  file_src_JsonReader_SceneLoaderJson.cpp.doctree  file_src_JsonReader_SceneLoaderJson.h.doctree  function_namespacesofa_1_1simulation_1a5a4fa9af0675500db163eed77cdabb44.doctree  function_namespacesofa_1_1simulation_1a5d04ca0524d99bee915e41055ade921f.doctree  function_namespacesofa_1_1simulation_1aa5f25222c82f45ea0f7cb322f511caf5.doctree  function_namespacesofa_1_1simulation_1acc99750d6989a249fdcb5121ff9cbac4.doctree  library_root.doctree  namespace_sofa.doctree  namespace_sofa__simulation.doctree  unabridged_orphan.doctree  (+3 more)
_sources/: index.rst.txt
api/: classsofa_1_1simulation_1_1SceneLoaderJson.html  dir_src.html  dir_src_JsonReader.html  file_src_JsonReader_SceneLoaderJson.cpp.html  file_src_JsonReader_SceneLoaderJson.h.html  function_namespacesofa_1_1simulation_1a5a4fa9af0675500db163eed77cdabb44.html  function_namespacesofa_1_1simulation_1a5d04ca0524d99bee915e41055ade921f.html  function_namespacesofa_1_1simulation_1aa5f25222c82f45ea0f7cb322f511caf5.html  function_namespacesofa_1_1simulation_1acc99750d6989a249fdcb5121ff9cbac4.html  library_root.html  namespace_sofa.html  namespace_sofa__simulation.html  program_listing_file_src_JsonReader_SceneLoaderJson.cpp.html  program_listing_file_src_JsonReader_SceneLoaderJson.h.html  unabridged_orphan.html  variable_namespacesofa_1_1simulation_1a2bd072fe472ec2019c28b10f12ad2768.html
docs/: Doxyfile  conf.py  index.rst
scenes/: FEMBAR_EigenSimplicialLDLT.json  caduceus.json
tests/: CMakeLists.txt  SceneLoaderJson_test.cpp
(+20 files in other folders)
